--- a/bogobogo-frontend/src/locales/zh.json
+++ b/bogobogo-frontend/src/locales/zh.json
@@ -3,7 +3,7 @@
         "myName": "我的名字是"
     },
     "subtitle": {
-        "engineer": "我是一名拥有10多年软件工程经验的人工智能工程师。",
+        "engineer": "我是一名拥有10多年*软件工程*经验的*AI工程师*。",
         "developer": "我是一名软件开发人员，热衷于创造创新的解决方案。",
         "researcher": "我是一名研究员，专注于人工智能和机器学习。"
     },
@@ -12,7 +12,6 @@
         "projects": "项目"
     },
     "footer": {
-        "copyright": "© 版权 Bogo 2016-2024. 版权所有。",
         "shoutout": "感谢黑山共和国的顶级域名"
     },
     "cv": {
