--- a/bogobogo-frontend/src/locales/en.json
+++ b/bogobogo-frontend/src/locales/en.json
@@ -3,9 +3,9 @@
         "myName": "My name is"
     },
     "subtitle": {
-        "engineer": "I'm an *AI engineer* with 10+ years experience in *software engineering*.",
-        "developer": "I'm a software developer with a passion for creating innovative solutions.",
-        "researcher": "I'm a researcher focused on artificial intelligence and machine learning."
+        "engineer": "I'm an *AI engineer* with 10+ years experience in *software engineering*",
+        "developer": "I'm a *software developer* with a passion for creating *innovative solutions*",
+        "researcher": "I'm a *researcher* focused on *artificial intelligence* and *machine learning*"
     },
     "header": {
         "cv": "CV",
