feat(home): responsive, chinese & background tracking

--- a/bogobogo-frontend/src/locales/zh.json
+++ b/bogobogo-frontend/src/locales/zh.json
@@ -3,9 +3,9 @@
         "myName": "我的名字是"
     },
     "subtitle": {
-        "engineer": "我是一名拥有10多年*软件工程*经验的*AI工程师*。",
-        "developer": "我是一名软件开发人员，热衷于创造创新的解决方案。",
-        "researcher": "我是一名研究员，专注于人工智能和机器学习。"
+        "engineer": "我是一名拥有10多年*软件开发*经验的*AI工程师*",
+        "developer": "我是一名*软件开发人员*，热衷于创造*创新的解决方案*",
+        "researcher": "我是一名*研究员*，专注于*人工智能*和*机器学习*"
     },
     "header": {
         "cv": "简历",
