--- a/bogobogo-frontend/src/locales/zh.json
+++ b/bogobogo-frontend/src/locales/zh.json
@@ -1,11 +1,13 @@
 {
     "intro": {
-        "myName": "我的名字是"
+        "myName": "我是"
     },
     "subtitle": {
-        "engineer": "我是一名拥有10多年*软件开发*经验的*AI工程师*",
-        "developer": "我是一名*软件开发人员*，热衷于创造*创新的解决方案*",
-        "researcher": "我是一名*研究员*，专注于*人工智能*和*机器学习*"
+        "engineer": "我是一名拥有扎实*全栈开发*背景的*AI工程师*",
+        "programmer": "我是一名热衷于*学习*、*实践*与*创造*的*开发者*",
+        "blogger": "我时常更新*博客*，内容主要涉猎*人工智能*、*读书*与*电影*",
+        "designer": "我还是一名业余*平面设计师*、*摄影师*，我相信*vision*是通往*mission*的大门",
+        "more": "然而，我*不仅*是这些标签，*永远好奇*、*不断进化*"
     },
     "header": {
         "cv": "简历",
