--- a/bogobogo-frontend/src/locales/zh.json
+++ b/bogobogo-frontend/src/locales/zh.json
@@ -20,7 +20,7 @@
     "header": {
         "cv": "简历",
         "projects": "项目",
-        "skillset": "技术栈",
+        "skillset": "技能栈",
         "wechat":"微信公众号",
         "gallery": "作品集",
         "ins": "Instagram",
@@ -82,6 +82,38 @@
                     "detail": "智能教育软件前端网页开发"
                 }
             }
+        }
+    },
+    "skillset": {
+        "programmingLang": "编程语言",
+        "programmingLangList": {
+            "python": "Python",
+            "js": "JavaScript (包括 Node.js, HTML, CSS)",
+            "java": "Java",
+            "c": "C/C++",
+            "go": "Go"
+        },
+        "ai": "人工智能",
+        "aiList": {
+            "dl": "深度学习",
+            "aiSystem": "AI系统",
+            "prompt": "提示工程",
+            "llm": "大语言模型",
+            "rl": "强化学习"
+        },
+        "softwareDev": "软件开发",
+        "softwareDevList": {
+            "systemArch": "系统架构",
+            "project": "项目管理",
+            "product": "产品设计",
+            "ui": "UI/UX设计"
+        },
+        "lang": "自然语言",
+        "langList": {
+            "mandarin": "中文（普通话）",
+            "english": "英语",
+            "cantonese": "中文（粤语）",
+            "german": "德语"
         }
     }
 }
