feat(project): fullscreen carousel & style fix

--- a/bogobogo-frontend/src/locales/en.json
+++ b/bogobogo-frontend/src/locales/en.json
@@ -13,7 +13,7 @@
         "lang": "Switch language",
         "ins": "Instagram",
         "git": "GitHub",
-        "wechat": "WeChat articles",
+        "wechat": "WeChat blog",
         "linkedin": "LinkedIn",
         "gallery": "Gallery"
     },
@@ -21,7 +21,7 @@
         "cv": "CV",
         "projects": "Projects",
         "skillset": "Skill Set",
-        "wechat":"WeChat Articles",
+        "wechat":"WeChat Blog",
         "gallery": "Gallery",
         "ins": "Instagram",
         "email": "Email",
