feat(cv): add logos

--- a/bogobogo-frontend/src/locales/en.json
+++ b/bogobogo-frontend/src/locales/en.json
@@ -6,7 +6,7 @@
         "engineer": "I'm an *AI engineer* with a strong *full-stack development* background",
         "programmer": "I'm a *passionate programmer* who programs to *learn*, *practice* and *create*",
         "blogger": "I'm a *blogger* who mainly writes about *AI*, *books*, and *films*",
-        "designer": "I'm also an amateur *graphic designer* & *photographer* who believes *vision* is the stepstone to *mission*",
+        "designer": "I'm also an amateur *graphic designer* & *photographer* who believes *vision* is the stepstone to *ambition*",
         "more": "Yet, I'm *not* defined by those labels, ever *curious* and ever *evolving*"
     },
     "link": {
