--- a/bogobogo-frontend/src/locales/zh.json
+++ b/bogobogo-frontend/src/locales/zh.json
@@ -6,7 +6,7 @@
         "engineer": "我是一名拥有扎实*全栈开发*背景的*AI工程师*",
         "programmer": "我是一名热衷于*学习*、*实践*与*创造*的*开发者*",
         "blogger": "我时常更新*博客*，内容主要包括*人工智能*、*图书*与*电影*",
-        "designer": "我还是一名业余*平面设计师*、*摄影师*，我相信*vision*是*mission*的基石",
+        "designer": "我还是一名业余*平面设计师*、*摄影师*，我相信*vision*是*ambition*的基石",
         "more": "然而，我*不仅*被这些标签定义，*充满好奇*、*不断进化*"
     },
     "link": {
